test/parser/char_literal/invalid_escape_error.myte
module test

val x = '\a'